# ultramann.github.io

./: .gitignore  index.html  ultramann-github-io.cabal
about/: index.html
blog_code/decision_tree_viz/: decision_tree_viz.py
blog_code/numeric_python_intro/: make_blog_images.py
code/decision_tree_viz/: make_blog_images.py
content/: index.html
content/code/: README.md
content/code/numeric_python_intro/: make_blog_images.py
content/code/smaller_mac_latex/: setup.sh
content/code/visualizing_sklearn_decision_trees/: decision_tree_viz.py  make_blog_images.py
content/css/: default.css  syntax.css
content/js/: ultramann.js
content/notes/: bash.md  cabal.md  git.md  jQuery.md  javascript.md  tar.md  vim.md
content/pages/: about.md
content/posts/: numeric_python.md  numeric_python_intro.md  smaller_mac_latex.md  visualizing_sklearn_decision_trees.md
content/templates/: base.html  byte.html  bytes.html  home-notes.html  home-posts.html  notes.html  posts.html
css/: default.css  syntax.css
js/: ultramann.js
notes/: index.html
notes/bash/: index.html
notes/cabal/: index.html
notes/git/: index.html
notes/jQuery/: index.html
notes/javascript/: index.html
notes/tar/: index.html
notes/vim/: index.html
posts/: index.html
posts/haskell_net/: index.html
posts/how_i_use_tmux/: index.html
posts/how_i_use_vim/: index.html
posts/numeric_python/: index.html
posts/numeric_python_intro/: index.html
posts/smaller_mac_latex/: index.html
posts/visualizing_sklearn_decision_trees/: index.html
src/: deploy.sh  site.hs
(+5 files in other folders)
