name:               ultramann-github-io
author:             Cary Goltermann
version:            0.1.0.0
synopsis:           Cary Goltermann's personal blog
homepage:           ultramann.github.io
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src/
  main-is:          site.hs
  ghc-options:      -O2 -threaded
  default-language: Haskell2010
  build-depends:    base, 
                    filepath  >= 1.3.0.0  && < 2, 
                    hakyll    == 4.9.*
